kubernetes/deployement.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vscode-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-server
  namespace: vscode-server
  labels:
    app: vscode-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode-server
  template:
    metadata:
      labels:
        app: vscode-server
    spec:
      # runtimeClassName: nvidia
      # nodeSelector:
      #   preferred-node: rtx-4090-worker
      # tolerations:
      #   - key: "gpu"
      #     operator: "Equal"
      #     value: "true"
      #     effect: "NoSchedule"
      securityContext:
        privileged: true  # Required for Docker-in-Docker
      containers:
        - name: vscode-server
          image: yassinsiouda/vscode-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: vscode
          readinessProbe:
            httpGet:
              path: /
              port: 8443
          volumeMounts:
            - name: storage
              mountPath: /config
            - name: storage
              mountPath: /config/workspace
              subPath: workspace
            - name: docker-sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: vscode-storage-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: vscode-server
  namespace: vscode-server
spec:
  selector:
    app: vscode-server
  ports:
    - name: vscode
      protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-server
  namespace: vscode-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vscode-server
                port:
                  number: 8443
